Add YOLO model integration and update configuration for OBB detection

--- a/config.ini
+++ b/config.ini
@@ -9,15 +9,15 @@ log_file = ./system.log
 db_file = sqlite:///shipping_data.db
 
 [MODULES]
-; Opciones: RAPIDOCR, DOCTR
 ocr_engine = RAPIDOCR
-enable_yolo_detection = false
-enable_preprocessing = true
-; Ruta al modelo YOLO (.pt) si enable_yolo_detection = true
-yolo_model_path = yolo_label_detect.pt
+enable_yolo_detection = true
+; Importante: Ruta a tu modelo OBB entrenado
+yolo_model_path = best.pt
 
 [OCR_PARAMS]
-; Confianza mínima (0.0 - 1.0)
-min_confidence = 0.6
-; Longitud mínima del código esperado
-min_length = 8
+; Confianza de detección de etiqueta (YOLO)
+yolo_conf = 0.35
+yolo_imgsz = 1024
+
+; Confianza mínima para aceptar un caracter OCR individual (filtro interno)
+ocr_min_confidence = 0.5
